getTableList column names match ODBC spec now
fixed sqlite "show tables like ..." queries

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@
 	fixed a '...\\''...' parsing bug
 	non-odbc connection modules now return odbc-compatible(ish) table lists
 	client info is no longer reset during endSession
+	fixed a bug that could cause sqlite "show tables like '...'" to crash
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
