--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@
 	fixed a bug that could cause sqlite "show tables like '...'" to crash
 	fixed odbc unicode null user/password bug
 	fixed PyString_AsString for python 3.<3
+	fixed bug that caused some MSSQL lobs to sometimes be returned as
+		nulls when using ODBC on the backend
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
