--- a/ChangeLog
+++ b/ChangeLog
@@ -43,6 +43,7 @@
 	fixed PyString_AsString for python 3.<3
 	fixed bug that caused some MSSQL lobs to sometimes be returned as
 		nulls when using ODBC on the backend
+	fixed bug that caused some MSSQL date fields to get returned as garbage
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
