newer datatypes are finagled to older types for older clients

--- a/ChangeLog
+++ b/ChangeLog
@@ -44,11 +44,12 @@
 	fixed bug that caused some MSSQL lobs to sometimes be returned as
 		nulls when using ODBC on the backend
 	fixed bug that caused some MSSQL date fields to get returned as garbage
-	fixed older sqlrclient compatibility bug
+	fixed a few older sqlrclient compatibility bugs
 	fixed SQLFetch parameter type mismatch in ODBC api
 	removed a non-c++17-compliant "register" from custom_nw logger
 	added support for nodejs 12
 	SQLDriverConnect can take an inline DSN now
+
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
