--- a/ChangeLog
+++ b/ChangeLog
@@ -49,7 +49,7 @@
 	removed a non-c++17-compliant "register" from custom_nw logger
 	added support for nodejs 12
 	SQLDriverConnect can take an inline DSN now
-
+	fixed odbc maxcolumncount=-1 crash
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
