fixed mysql protocol empty-lob bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	fixed postgresql connection module type oid bug
 	added tag filter/moduledata
 	added moduledata(s)::closeResultSet()/endTransaction()/endSession()
+	mysql protocol returns empty lobs correctly now (not as nulls)
 
 1.6.0 - added begin, commit, rollback events
 	fixed array_init() calls for php-7.3
