--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
 	test improvements
 	documentation improvements
 	split sqlrelay-crash directive into its own module
+	deprecated drop-in replacement libraries in favor of protocol support
 
 1.6.0 - added begin, commit, rollback events
 	fixed array_init() calls for php-7.3
