--- a/ChangeLog
+++ b/ChangeLog
@@ -13,9 +13,10 @@
 	split sqlrelay-crash directive into its own module
 	deprecated drop-in replacement libraries in favor of protocol support
 	fixed various mysql 4.x bugs
-	added NULL handoff socket workaround
 	sqlr-status creates statistics on heap now instead of stack, to work
 		on platforms with a small default ulimit stack
+
+1.6.1 - added NULL handoff socket workaround
 	improved shutdown/crash handlers for sqlr-listener/connection
 
 1.6.0 - added begin, commit, rollback events
