--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 	fixed various mysql 4.x bugs
 	sqlr-status creates statistics on heap now instead of stack, to work
 		on platforms with a small default ulimit stack
+	mysql stored procedure test is bypassed for older mysql
+	tls test is bypassed for older openssl
 
 1.6.1 - added NULL handoff socket workaround
 	improved shutdown/crash handlers for sqlr-listener/connection
