--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.7.1 - 
+1.7.1 - unattended tests
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
