uppercase .CSV suffix now detected

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	added sqlrresultsetdomnode class to c++ client API
 	fixed datedelimiters parameter
 	added support for SQLParamOptions with SQLUINTEGER arguments
+	sqlr-import detects uppercase .CSV suffix now
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
