fixed number-detection bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	fixed datedelimiters parameter
 	added support for SQLParamOptions with SQLUINTEGER arguments
 	sqlr-import detects uppercase .CSV suffix now
+	fixed a csv number-detection but in sqlr-import
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
