fixed delete[] of table

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	added support for SQLParamOptions with SQLUINTEGER arguments
 	sqlr-import detects uppercase .CSV suffix now
 	fixed a csv number-detection but in sqlr-import
+	fixed a delete[] of a const in sqlr-import
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
