--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	fixed a csv number-detection but in sqlr-import
 	fixed a delete[] of a const in sqlr-import
 	it's possible to specify a commitcount of 0 with sqlr-import now
+	moved sqlrimportxml/csv classes into libsqlrclient
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
