--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 	fixed a delete[] of a const in sqlr-import
 	it's possible to specify a commitcount of 0 with sqlr-import now
 	moved sqlrimportxml/csv classes into libsqlrclient
+	moved sqlrexportxml/csv classes into libsqlrclient
 	csv import/export is consistent now
 
 1.7.0 - added postgresql protocol module
