added some event methods to sqlrexport
migrated parsedatetime methods to rudiments

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	moved sqlrimportxml/csv classes into libsqlrclient
 	moved sqlrexportxml/csv classes into libsqlrclient
 	csv import/export is consistent now
+	added some event methods to sqlrexport
+	migrated parsedatetime functions to rudiments datetime class
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
