--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
 	different postgresql cursors use different stmtNames now
 	sqlrimportcsv can create a primary key that's not in the CSV now
 	sqlrexportcsv quotes 12+ digit numbers now
+	fixed subtle, count-related issues when validating bind variables on
+		the client side, that could cause a hang
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
