applied patch to fix debug logger crash

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
 	fixed subtle, count-related issues when validating bind variables on
 		the client side, that could cause a hang
 	added an aes128 pwdenc module
+	applied a patch to fix a crash in the debug logger (missing "%s")
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
