added splitObjectName, mysql connection uses it in getColumnList now

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
 	applied a patch to fix a crash in the debug logger (missing "%s")
 	added a tweak to getsitearchdir.rb to fix incorrect lib/lib64 reporting
 		on some centos x64 systems
+	fixed mysql getColumnList to distinquish proper db/schema
 
 1.7.0 - added postgresql protocol module
 	updated postgresql connection module to get column info pre-execute
