--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.9.0 - added missing inequality operators to end-of-bind detection
+
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
 	fixed datedelimiters parameter
