--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 1.9.0 - added missing inequality operators to end-of-bind detection
+	fixed commit/begin without commitcount error in sqlrimportcsv
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
