--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
 	fetch errors aren't returned if sqlrclient protocol version < 2
+	query-intercept catches "begin transaction" now
+	begin() runs "begin transaction" instead of just "begin" on SQL Server
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
