--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 	sqlrimportcsv handles dates without centuries now
 	fixed crash in replay module when table name is quoted
 	mysql explain statements work now
+	fixed node-gyp.js detection on ubuntu 20.04
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
