--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
 	fixed node-gyp.js detection on ubuntu 20.04
 	added configure options for PHP 8.x
 	added php/pdo module tweaks for PHP 8
+	mysql and postgresql protocol modules support TLS now
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
