--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,9 @@
 	added php/pdo module tweaks for PHP 8
 	mysql and postgresql protocol modules support TLS now
 	pushed most of tls/gss code up into sqlrprotocol parent class
+	fixed subtle issues in mysql/postgresql database modules that could
+		sometimes cause reexecutes of the same query with the same
+		bind variables to return no results the second time
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
