--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
 		sometimes cause reexecutes of the same query with the same
 		bind variables to return no results the second time
 	the configure script specifically looks for liberl_interface.a now
+	updated nodejs macros for node 14+
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
