fixed thread-macro use in getRowLengthsDictionary()

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@
 		bind variables to return no results the second time
 	the configure script specifically looks for liberl_interface.a now
 	updated nodejs macros for node 14+
+	fixed a subtle bug in the Python API's getRowLengthsDictionary
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
