--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@
 	the configure script specifically looks for liberl_interface.a now
 	updated nodejs macros for node 14+
 	fixed a subtle bug in the Python API's getRowLengthsDictionary
+	added GVL management to the Ruby API
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
