--- a/AUTHORS
+++ b/AUTHORS
@@ -230,3 +230,6 @@ George Carrette - gjc@alum.mit.edu
 
 Joseph Caputo - Joseph.Caputo@broadridge.com
 	MySQL 8.0 compat patch
+
+Igor - laigor@mail.ru
+	configure.vbs internationalization patch
