--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2.0.0 - removed support for mdbtools
+
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
 	fetch errors aren't returned if sqlrclient protocol version < 2
