--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2.0.0 - removed support for mdbtools
 	updated to use new rudiments collection model
 	added sqlrresultsettable class
+	fixed some missing map clears in postgresql protocol module
 
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
