--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	updated to use new rudiments collection model
 	added sqlrresultsettable class
 	fixed some missing map clears in postgresql protocol module
+	fixed NULL-bind in the ODBC driver
 
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
