--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
 	fixed some missing map clears in postgresql protocol module
 	fixed NULL-bind in the ODBC driver
 
+1.9.1 - backports from 2.0.0 branch:
+	fixed some missing map clears in postgresql protocol module
+	fixed NULL-bind in the ODBC driver
+
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
 	fetch errors aren't returned if sqlrclient protocol version < 2
