--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 1.9.1 - backports from 2.0.0 branch:
 	fixed some missing map clears in postgresql protocol module
 	fixed NULL-bind in the ODBC driver
+	updated spec file to build python 3 packages on rhel 7
 
 1.9.0 - added missing inequality operators to end-of-bind detection
 	fixed commit/begin without commitcount error in sqlrimportcsv
