--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 	fixed a subtle bug that could cause closeResultSet()/clearError() not
 		to be called between reexecutes if the previous execute resulted
 		in an error
+	added error translations framework
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
