--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
 		in an error
 	added error translations framework
 	migrated tds and oracle protocols to public distro
+		(built but not currently installed though)
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
