moved "dropin" stuff to "protocol"

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 	added error translations framework
 	migrated tds, oracle, and teradata protocols to public distro
 		(built but not currently installed though)
+	removed drop-in replacement modules for mysql and postgresql
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
