--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,10 @@
 		other supporting files being installed on the build host's
 		filesystem
 	fixed a potential reference-after-free in the mysql connection module
+	updated to use acfirstworks.m4 and acrudiments.m4 from rudiments
+	added acsqlrelay.m4 for other projects to use in their configure scripts
+	added some configure fixes for older OS X
+	added some fixes for older PHP
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
