--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 	added some fixes for older PHP
 	removed authentication timeout methods/functions
 	added some hacks for older freetds
+	added column-mapping to the sqlrimport class
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
