--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@
 	added upper/lower/mixed-case of column names to the sqlrimport class
 	reamed "translation" modules to "querytranslation" modules
 	updated configure script to support oracle 18c and 19c instantclient
+	refactored find-oracle-libs-at-runtime logic
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
