--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@
 	updated configure script to support oracle 18c and 19c instantclient
 	refactored find-oracle-libs-at-runtime logic
 	added configure test for python 3.10+
+	added configure test for ruby 3+
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
