--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@
 	refactored find-oracle-libs-at-runtime logic
 	added configure test for python 3.10+
 	added configure test for ruby 3+
+	added -fdeclspec configure test for ruby with clang
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
