--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@
 	added configure test for python 3.10+
 	added configure test for ruby 3+
 	added -fdeclspec configure test for ruby with clang
+	fixed a potential hang when handoff="pass"
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
