refactored sqlr-connection to use shutdown-flag based shutdown refactored sqlr-scaler to use process shutdown-flag methods

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@
 	added configure test for ruby 3+
 	added -fdeclspec configure test for ruby with clang
 	fixed potential hangs and short-writes when handoff="proxy"
+	sqlr-stop uses SIGTERM rather than SIGINT to shut down processes now
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
