--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,10 @@
 	added -fdeclspec configure test for ruby with clang
 	fixed potential hangs and short-writes when handoff="proxy"
 	sqlr-stop uses SIGTERM rather than SIGINT to shut down processes now
+	servers use the rudiments process class shutdown flag framework now to
+		avoid calling non-async-signal-safe functions from within
+		signal handlers
+	mysql connection supports MariaDB 10.6's updated text lob lengths
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
