--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,7 @@
 	ODBC driver supports SQLGetInfo for some more 3.8.0 options now
 	ODBC driver returns SUCCES_WITH_INFO if connect succeeds but
 		afterwards autocommit or select-db fail now
+	postgresql connection checks ncols and nrows in noRowsToReturn() now
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
