--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,8 @@
 	ODBC driver returns SUCCES_WITH_INFO if connect succeeds but
 		afterwards autocommit or select-db fail now
 	postgresql connection checks ncols and nrows in noRowsToReturn() now
+	fetchatonce=0 is the default for postgresql now, and single-stepping
+		is only used if fetchatonce=1
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
