--- a/doc/faq.wt
+++ b/doc/faq.wt
@@ -49,6 +49,7 @@
 * [#pending How can I keep from getting "Attempt to initiate a new Adaptive Server operation with results pending" errors when using FreeTDS?]
 * [#sybasefreetdsdiff What's the difference between the SAP/Sybase and FreeTDS connections?]
 * [#postgresql How do I get data type names instead of numbers when using PostgreSQL?]
+* [#postgresqlfetchatonce Why do I get truncated results when using fetchatonce=1 with PostgreSQL?]
 * [#nlslang I'm using a non-ascii character set in my Oracle database, why am I get get garbage back when I do a select?]
 * [#oracleosauth How do I use Oracle's OS-Authentication (users identified externally)?]
 * [#mysqltrans Why aren't commit's working in MySQL/MariaDB?]
@@ -469,6 +470,31 @@ The following connectstring will instruct SQL Relay to return type numbers:
  user=exampleuser;password=examplepass;db=exampledb;mangletypes=no
 
 Leaving the mangletypes parameter out altogether is the same as setting it to "no".
+
+[[br]][=#postgresqlfetchatonce]
+=== Why do I get truncated results when using fetchatonce=1 with !PostgreSQL? ===
+
+SQL Relay uses the libpq API to run queries against !PostgreSQL.  libpq provides 2 modes for fetching result sets.  It can either fetch and buffer the entire result set at once before allowing SQL Relay to start sending rows back to the client, or it can fetch and buffer one row at a time and allow SQL Relay to send one row at a time back to the client.
+
+fetchatonce=0 (the default) enables the first mode.  fetchatonce=1 enables the second mode.
+
+If your queries tend to have large result sets, then you might be need to set fetchatonce=1 to conserve memory on the server side.  However, due to the quirky way PostgreSQL implements fetching one row at a time, when the result set of the nested query is closed, the result set of the outer query also ends up being closed.  This can cause unexpected behavior.
+
+The SQL Relay client has a similar option to fetchatonce - setResultSetBufferSize().  If it is set to 0 (the default) then the SQL Relay client fetches and buffers the entire result set after running a query.  If it is set to a non-0 value, then the SQL Relay client fetches and buffers the result set in blocks, where each block contains the number of specified rows.
+
+So, if fetchatonce=1 then...
+
+If the SQL Relay client is using setResultSetBufferSize(0) then even though the SQL Relay server is stepping through the result set one row at a time, it will have stepped through and returned all rows of the outer query to the client, and closed the result set, before the even running the first nested query.  In this case, queries work, and memory is conserved on the server, but as the client has to buffer the entire result set, memory is not conserved on the client side.
+
+If the SQL Relay client calls setResultSetBufferSize() with a non-zero argument, then the SQL Relay server will only have stepped through some rows of the outer query's result set before running the first nested query, and when the nested query's result set is closed, the outer query's result set will also be closed.  At that point, the client will only be able to access whatever rows from the outer query that it had already buffered.  In this case, rows could end up being truncated in the outer query.
+
+So, your options are:
+
+* use fetchatonce=0 and expect that the server may require a lot of memory to process large result sets
+* use fetchatonce=1, always use setResultSetBufferSize(0) when running nested queries, and expect that the client may require a lot of memory to process large result sets
+
+Unfortunately, at present, with PostgreSQL, those are the only two options.
+
 
 [[br]][=#nlslang]
 === Why am I getting question marks and other garbage back when I do a select?  It worked fine when I was using the native database command line tool. ===
